--- a/webserver-httpd.yaml
+++ b/webserver-httpd.yaml
@@ -1,21 +1,27 @@
 - name: Install web server 
   hosts: ec2
   become: yes
+  vars:
+    webserver: nginx
+    webserver_root_dir: /var/www/html
   tasks:
+  - name: debug
+    debug:
+      msg: "The value of webserver {{webserver}}"
   - name: Webserver is isntalled
     package: 
-      name: httpd
+      name: "{{webserver}}"
       state: present
   - name: Webserver is up
     service:
-      name: httpd
+      name: "{{webserver}}"
       state: started
   - name: webserver root directory exists
     file:
-      path: /var/www/html
+      path: "{{webserver_root_dir}}"
       state: directory
   - name: static website is deployed
     uri:
       url: https://raw.githubusercontent.com/abdennour/example-static-website/master/index.html
-      dest: /var/www/html
+      dest: "{{webserver_root_dir}}"
   
